pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: pgadmin4
